--- a/Jungle-Academy/portfolio4-admin_design/css/index.scss
+++ b/Jungle-Academy/portfolio4-admin_design/css/index.scss
@@ -122,10 +122,10 @@ section+section {
 #sales-info {
   display: flex;
   justify-content: space-between;
-  height: 343px;
+  flex-wrap: wrap;
 
   .map-area {
-    width: 66.3%;
+    width: 66.4%;
     overflow: hidden;
 
     div {
@@ -147,7 +147,7 @@ section+section {
   }
 
   .sales {
-    width: 33%;
+    width: 32.85%;
     background: white;
 
     ul {
@@ -156,6 +156,7 @@ section+section {
       margin: 30px;
 
       li {
+        width: 49%;
         font-size: 18px;
         font-weight: 300;
 
@@ -210,15 +211,17 @@ section+section {
 }
 
 .joing {
-  width: 74%;
-  background: wheat;
-  overflow: hidden;
+  position: relative;
+  
+  >div, >ul {
+    width: 32.85%;
+  }
 
   .post {
     position: absolute;
     top: 0px;
     left: 0px;
-    width: 245px;
+    width: 51%;
     padding: 18px;
     background: rgba(40, 162, 224, 0.85);
     color: #fff;
@@ -254,11 +257,6 @@ section+section {
 
   .joing-group {
     position: relative;
-    float: left;
-    width: 44%;
-    height: auto;
-    margin-right: 10px;
-    overflow: hidden;
     transition: scale .4s;
     
     em {
@@ -292,10 +290,12 @@ section+section {
       color: #fff;
 
       span {
+        font-size: 12px;
         font-weight: bold;
       }
 
       .user-profile {
+        margin-top: 18px;
         width: 35px;
         height: 35px;
       }
@@ -323,21 +323,123 @@ section+section {
   }
 
   > ul {
-    display: flex;
-    justify-content: space-between;
-    overflow: hidden;
-    
+    position: absolute;
+    top: 0px;
+    left: 50%;
+    transform: translateX(-50%);
+    height: 100%;
 
     li {
-      // width: 25%;
-      float: left;
+      position: absolute;
+      width: calc(50% - 5px);
+      height: calc(50% - 5px);
+      background: white;
+      padding: 18px;
 
-      .post {
-        position: static;
+      div {
+        width: 100%;
+        height: 100%;
+      }
+
+      div:nth-child(1) {
+        // display: none;
+      }
+      
+      div:nth-child(2) {
+        display: none;
+      }
+    }
+
+    li:first-child {
+      top: 0%; 
+      left: 0%;
+      background: #bcbcbc;
+      color: #fff;
+      font-family: Arial, Helvetica, sans-serif;
+
+      i {
+        display: inline-block;
+        color: #fff;
+      }
+
+      span:first-of-type {
+        display: block;
+        margin-top: 5px;
+        font-size: 12px;
+        opacity: 0.7;
+      }
+
+      p {
+        margin-top: 10px;
+        font-size: 25px;
+        line-height: 1.3;
+
+        em {
+          font-style: normal;
+        }
+      }
+
+      span:nth-of-type(2) {
+        display: inline-block;
+        margin: 30px 5px 5px 0px;
+      }
+    }
+
+    li:nth-child(2) {
+      top: 0%; 
+      right: 0%;
+      background: #0090d9;
+      color: #fff;
+
+      div {
+        padding-top: 5px;
+
+        .user {
+          display: inline-block;
+          width: 40px;
+          height: 40px;
+          border-radius: 20px;
+          overflow: hidden;
+
+          img {
+            width: 100%;
+          }
+        }
+
+        h2 {
+          display: inline-block;
+          text-transform: capitalize;
+
+        }
+
+        span {
+          display: block;
+        }
+
+        // background: black;
+      }
+    }
+    li:nth-child(3) {bottom: 0%; left: 0%;}
+    li:nth-child(4) {
+      bottom: 0%; 
+      right: 0%;
+      
+      img {
         width: 100%;
       }
     }
+
   }
+
+  .weather {
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    height: 100%;
+    background: white;
+    font-size: 60px;
+  }
+
 }
 
 
