4번 리스트 div 어디갔니

--- a/Jungle-Academy/portfolio4-admin_design/css/index.css
+++ b/Jungle-Academy/portfolio4-admin_design/css/index.css
@@ -238,7 +238,6 @@ section + section {
   padding: 18px;
   background: rgba(40, 162, 224, 0.85);
   color: #fff;
-  font-family: Arial, Helvetica, sans-serif;
 }
 
 .joing .post i {
@@ -256,7 +255,12 @@ section + section {
 .joing .post p {
   margin-top: 15px;
   font-size: 21px;
+  font-weight: 100;
   line-height: 1.3;
+}
+
+.joing .post p em {
+  font-weight: 400;
 }
 
 .joing .post span {
@@ -368,7 +372,6 @@ section + section {
   left: 0%;
   background: #bcbcbc;
   color: #fff;
-  font-family: Arial, Helvetica, sans-serif;
 }
 
 .joing > ul li:first-child i {
@@ -385,17 +388,14 @@ section + section {
 
 .joing > ul li:first-child p {
   margin-top: 10px;
-  font-size: 25px;
+  font-size: 22px;
+  font-weight: 100;
   line-height: 1.3;
 }
 
 .joing > ul li:first-child p em {
   font-style: normal;
-}
-
-.joing > ul li:first-child span:nth-of-type(2) {
-  display: inline-block;
-  margin: 30px 5px 5px 0px;
+  font-weight: 400;
 }
 
 .joing > ul li:nth-child(2) {
@@ -405,15 +405,11 @@ section + section {
   color: #fff;
 }
 
-.joing > ul li:nth-child(2) div {
-  padding-top: 5px;
-}
-
 .joing > ul li:nth-child(2) div .user {
   display: inline-block;
-  width: 40px;
-  height: 40px;
-  border-radius: 20px;
+  width: 30px;
+  height: 30px;
+  border-radius: 15px;
   overflow: hidden;
 }
 
@@ -422,26 +418,58 @@ section + section {
 }
 
 .joing > ul li:nth-child(2) div h2 {
-  display: inline-block;
+  position: absolute;
+  top: 18px;
+  left: 50px;
   text-transform: capitalize;
+  margin-left: 5px;
+  font-size: 16px;
 }
 
-.joing > ul li:nth-child(2) div span {
-  display: block;
+.joing > ul li:nth-child(2) div h2 span {
+  font-weight: bold;
+}
+
+.joing > ul li:nth-child(2) div .revox {
+  display: inline-block;
+  position: absolute;
+  top: 35px;
+  left: 55px;
+  opacity: 0.5;
+}
+
+.joing > ul li:nth-child(2) p {
+  position: absolute;
+  bottom: 18px;
+  width: 85%;
+  font-size: 18px;
+  font-weight: 100;
+}
+
+.joing > ul li:nth-child(2) p em {
+  font-style: normal;
+  font-weight: 400;
 }
 
 .joing > ul li:nth-child(3) {
   bottom: 0%;
   left: 0%;
+  background: #27A599;
+  color: #fff;
 }
 
 .joing > ul li:nth-child(4) {
   bottom: 0%;
   right: 0%;
+  padding: 0px;
 }
 
-.joing > ul li:nth-child(4) img {
+.joing > ul li:nth-child(4) > div img {
   width: 100%;
+}
+
+.joing > ul li:nth-child(4) > div > div {
+  background: red;
 }
 
 .joing .weather {
