--- a/Jungle-Academy/portfolio4-admin_design/css/index.scss
+++ b/Jungle-Academy/portfolio4-admin_design/css/index.scss
@@ -225,7 +225,6 @@ section+section {
     padding: 18px;
     background: rgba(40, 162, 224, 0.85);
     color: #fff;
-    font-family: Arial, Helvetica, sans-serif;
 
     i {
       display: inline-block;
@@ -242,7 +241,12 @@ section+section {
     p {
       margin-top: 15px;
       font-size: 21px;
+      font-weight: 100;
       line-height: 1.3;
+
+      em {
+        font-weight: 400;
+      }
     }
 
     span {
@@ -355,7 +359,6 @@ section+section {
       left: 0%;
       background: #bcbcbc;
       color: #fff;
-      font-family: Arial, Helvetica, sans-serif;
 
       i {
         display: inline-block;
@@ -371,17 +374,14 @@ section+section {
 
       p {
         margin-top: 10px;
-        font-size: 25px;
+        font-size: 22px;
+        font-weight: 100;
         line-height: 1.3;
 
         em {
           font-style: normal;
+          font-weight: 400;
         }
-      }
-
-      span:nth-of-type(2) {
-        display: inline-block;
-        margin: 30px 5px 5px 0px;
       }
     }
 
@@ -392,13 +392,11 @@ section+section {
       color: #fff;
 
       div {
-        padding-top: 5px;
-
         .user {
           display: inline-block;
-          width: 40px;
-          height: 40px;
-          border-radius: 20px;
+          width: 30px;
+          height: 30px;
+          border-radius: 15px;
           overflow: hidden;
 
           img {
@@ -407,28 +405,65 @@ section+section {
         }
 
         h2 {
-          display: inline-block;
+          position: absolute;
+          top: 18px;
+          left: 50px;
           text-transform: capitalize;
+          margin-left: 5px;
+          font-size: 16px;
 
+          span {
+            font-weight: bold;
+          }
         }
 
-        span {
-          display: block;
+        .revox {
+          display: inline-block;
+          position: absolute;
+          top: 35px;
+          left: 55px;
+          opacity: 0.5;
         }
+      }
 
-        // background: black;
+      p {
+        position: absolute;
+        bottom: 18px;
+        width: 85%;
+        font-size: 18px;
+        font-weight: 100;
+
+        em {
+          font-style: normal;
+          font-weight: 400;
+        }
       }
     }
-    li:nth-child(3) {bottom: 0%; left: 0%;}
+    li:nth-child(3) {
+      bottom: 0%;
+      left: 0%;
+      background: #27A599;
+      color: #fff;
+
+      div {
+
+      }
+    }
     li:nth-child(4) {
       bottom: 0%; 
       right: 0%;
+      padding: 0px;
       
-      img {
-        width: 100%;
+      >div {
+        img {
+          width: 100%;
+        }
+
+        > div {
+          background: red;
+        }
       }
     }
-
   }
 
   .weather {
@@ -439,7 +474,8 @@ section+section {
     background: white;
     font-size: 60px;
   }
-
 }
+
+
 
 
