--- a/Jungle-Academy/portfolio4-admin_design/css/index.scss
+++ b/Jungle-Academy/portfolio4-admin_design/css/index.scss
@@ -252,11 +252,12 @@ section+section {
   }
 
   .joing-group.img-effect {
-    transform: scale(1.1);
+    transform: scale(1.1);//
   }
 
   .joing-group {
     position: relative;
+    overflow: hidden;//
     transition: scale .4s;
     
     em {
@@ -333,102 +334,33 @@ section+section {
       position: absolute;
       width: calc(50% - 5px);
       height: calc(50% - 5px);
-      background: white;
-      padding: 18px;
+      overflow: hidden;
 
       div {
+        position: absolute;
         width: 100%;
         height: 100%;
-      }
 
-      div:nth-child(1) {
-        // display: none;
-      }
-      
-      div:nth-child(2) {
-        display: none;
-      }
-    }
-
-    li:first-child {
-      top: 0%; 
-      left: 0%;
-      background: #bcbcbc;
-      color: #fff;
-      font-family: Arial, Helvetica, sans-serif;
-
-      i {
-        display: inline-block;
-        color: #fff;
-      }
-
-      span:first-of-type {
-        display: block;
-        margin-top: 5px;
-        font-size: 12px;
-        opacity: 0.7;
-      }
-
-      p {
-        margin-top: 10px;
-        font-size: 25px;
-        line-height: 1.3;
-
-        em {
-          font-style: normal;
-        }
-      }
-
-      span:nth-of-type(2) {
-        display: inline-block;
-        margin: 30px 5px 5px 0px;
-      }
-    }
-
-    li:nth-child(2) {
-      top: 0%; 
-      right: 0%;
-      background: #0090d9;
-      color: #fff;
-
-      div {
-        padding-top: 5px;
-
-        .user {
-          display: inline-block;
-          width: 40px;
-          height: 40px;
-          border-radius: 20px;
-          overflow: hidden;
-
-          img {
-            width: 100%;
-          }
-        }
-
-        h2 {
-          display: inline-block;
-          text-transform: capitalize;
-
-        }
-
-        span {
+        img {
           display: block;
+          width: 100%;
+          height: 100%;
         }
+      }
 
-        // background: black;
+      div:first-child {
+        top: 0%;
+      }
+
+      div:nth-child(2) {
+        top: 100%;
       }
     }
+
+    li:first-child {top: 0%; left: 0%;}
+    li:nth-child(2) {top: 0%; right: 0%;}
     li:nth-child(3) {bottom: 0%; left: 0%;}
-    li:nth-child(4) {
-      bottom: 0%; 
-      right: 0%;
-      
-      img {
-        width: 100%;
-      }
-    }
-
+    li:nth-child(4) {bottom: 0%; right: 0%;}
   }
 
   .weather {
@@ -439,7 +371,6 @@ section+section {
     background: white;
     font-size: 60px;
   }
-
 }
 
 
