--- a/Jungle-Academy/portfolio4-admin_design/css/index.scss
+++ b/Jungle-Academy/portfolio4-admin_design/css/index.scss
@@ -327,7 +327,7 @@ section+section {
     }
   }
 
-  > ul {
+  .joing-board {
     position: absolute;
     top: 0px;
     left: 50%;
@@ -345,136 +345,16 @@ section+section {
         width: 100%;
         height: 100%;
 
-      div:nth-child(1) {
-        // display: none;
-      }
-      
-      div:nth-child(2) {
-        display: none;
-      }
-    }
-
-    li:first-child {
-      top: 0%; 
-      left: 0%;
-      background: #bcbcbc;
-      color: #fff;
-
-      i {
-        display: inline-block;
-        color: #fff;
-      }
-
-      span:first-of-type {
-        display: block;
-        margin-top: 5px;
-        font-size: 12px;
-        opacity: 0.7;
-      }
-
-      p {
-        margin-top: 10px;
-        font-size: 22px;
-        font-weight: 100;
-        line-height: 1.3;
-
-        em {
-          font-style: normal;
-          font-weight: 400;
-        }
-      }
-    }
-
-    li:nth-child(2) {
-      top: 0%; 
-      right: 0%;
-      background: #0090d9;
-      color: #fff;
-
-      div {
-        .user {
-          display: inline-block;
-          width: 30px;
-          height: 30px;
-          border-radius: 15px;
-          overflow: hidden;
-
-          img {
-            width: 100%;
-          }
-        }
-
-        h2 {
-          position: absolute;
-          top: 18px;
-          left: 50px;
-          text-transform: capitalize;
-          margin-left: 5px;
-          font-size: 16px;
-
-          span {
-            font-weight: bold;
-          }
-        }
-
-        .revox {
-          display: inline-block;
-          position: absolute;
-          top: 35px;
-          left: 55px;
-          opacity: 0.5;
-        }
-      }
-
-      p {
-        position: absolute;
-        bottom: 18px;
-        width: 85%;
-        font-size: 18px;
-        font-weight: 100;
-
-        em {
-          font-style: normal;
-          font-weight: 400;
-        }
-      }
-    }
-    li:nth-child(3) {
-      bottom: 0%;
-      left: 0%;
-      background: #27A599;
-      color: #fff;
-
-      div {
-
-      }
-    }
-    li:nth-child(4) {
-      bottom: 0%; 
-      right: 0%;
-      padding: 0px;
-      
-      >div {
         img {
-          width: 100%;
-        }
-
-        > div {
-          background: red;
-        }
-      }
-    }
-        img {
-          display: block;
           width: 100%;
           height: 100%;
         }
       }
 
-      div:first-child {
+      div:nth-child(1) {
         top: 0%;
       }
-
+      
       div:nth-child(2) {
         top: 100%;
       }
@@ -486,16 +366,12 @@ section+section {
     li:nth-child(4) {bottom: 0%; right: 0%;}
   }
 
-  .weather {
+    .weather {
     position: absolute;
     top: 0px;
     right: 0px;
     height: 100%;
     background: white;
     font-size: 60px;
-  }
+    }
 }
-
-
-
-
