--- a/Jungle-Academy/portfolio4-admin_design/css/index.scss
+++ b/Jungle-Academy/portfolio4-admin_design/css/index.scss
@@ -221,8 +221,9 @@ section+section {
     position: absolute;
     top: 0px;
     left: 0px;
-    width: 51%;
-    padding: 18px;
+    width: 240px;
+    height: 230px;
+    padding: 22px;
     background: rgba(40, 162, 224, 0.85);
     color: #fff;
 
@@ -255,14 +256,15 @@ section+section {
     }
   }
 
-  .joing-group.img-effect {
-    transform: scale(1.1);//
-  }
-
   .joing-group {
     position: relative;
     overflow: hidden;//
-    transition: scale .4s;
+
+    &:hover {
+      img {
+        transform: scale(1.1);//
+      }
+    }
     
     em {
       font-style: initial;
@@ -270,6 +272,9 @@ section+section {
 
     img {
       width: 100%;
+      //트랜지션 안먹힘
+      transition: scale .4s;
+
     }
 
     div:nth-of-type(2) {
@@ -291,25 +296,28 @@ section+section {
     div:nth-of-type(3) {
       position: absolute;
       bottom: 3%;
-      left: 4%;
+      width: 100%;
+      padding-left: 4%;
       color: #fff;
 
       span {
-        font-size: 12px;
+        display: block;
         font-weight: bold;
       }
 
       .user-profile {
-        margin-top: 18px;
         width: 35px;
         height: 35px;
+        margin-top: 18px;
+        margin-right: 0px;
+        border-radius: 17px;
       }
 
       input {
         position: absolute;
         bottom: 8%;
-        left: 9%;
-        width: 56%;
+        left: 13%;
+        width: 55%;
         background: #fff;
         padding: 10px;
       }
@@ -317,12 +325,13 @@ section+section {
       button {
         position: absolute;
         bottom: 8%;
-        left: 67%;
+        left: 70%;
         width: 20%;
+        height: 35px;
         background: #27A599;
-        padding: 11px;
         color: #fff;
         font-weight: 100;
+        border-radius: 3px;
       }
     }
   }
