--- a/Jungle-Academy/portfolio5-full_page_design/css/index_p.scss
+++ b/Jungle-Academy/portfolio5-full_page_design/css/index_p.scss
@@ -1,26 +1,102 @@
-.section1 {
-  background: #AAB3AB;
+.section {
+  background: #FFEDC2;
 
-  div {
-    .content {
+  >div {
+    .content-wrap {
       position: absolute;
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
-      width: 75%;
+      width: 80%;
+      height: 80%;
+      margin: 0px auto;
+      box-shadow: 1px 1px 10px rgba(0,0,0,0.1), 1px 1px 10px rgba(0,0,0,0.1);
+      background: #F8F8F8;
+
+      .control {
+        .prev, .next {
+          img {
+            width: 80px;
+          }
+        }
+
+        .prev {
+          position: absolute;
+          top: 50%;
+          left: -90px;
+          transform: translateY(-50%);
+        }
+  
+        .next {
+          position: absolute;
+          top: 50%;
+          right: -90px;
+          transform: translateY(-50%);
+        }
+      }
+
+      .indicator {
+        position: absolute;
+        left: 0;
+        bottom: 20px;
+        width: 100%;
+        text-align: center;
+        // background: black;
+        
+        li {
+          display: inline-block;
+          border-radius: 20px;
+
+          &.on {
+            background: #1F1D17;
+          }
+
+          a {
+            display: block;
+            width: 10px;
+            height: 10px;
+            border: 3px solid #1F1D17;
+            border-radius: 20px;
+            overflow: hidden;
+            text-indent: -999px;
+          }
+        }
+
+        li+li {
+          margin-left: 3px;
+        }
+      }
+    }
+  }
+}
+
+.intro {
+  background: #F8F8F8;
+
+  //box-sizing 이 왜 안먹는지 모르겠음
+  > div {
+    .content-wrap {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 90%;
       margin: 0px auto;
       overflow: hidden;
-
+      box-shadow: 1px 1px 10px rgba(0,0,0,0.1), 1px 1px 10px rgba(0,0,0,0.1);
+      
       img {
         display: block;
         float: left;
         width: 50%;
       }
 
-      div {
+      > div {
         float: left;
         width: 50%;
-        padding: 50px;
+        height: 100%;
+        padding: 3%;
+        background: #FCFBFC;
 
         p{
           font-size: 18px;
@@ -55,12 +131,134 @@
                 display: block;
                 padding: 15px;
                 margin-top: 10px;
-                background: #EEE0B7;
+                background: #ABCCB1;
                 font-size: 18px;
 
                 &:hover {
-                  background: #EBEFC9;
+                  //다른 멋있는 효과
                 }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+.portfolio4 {
+  .content-wrap{
+    position: relative;
+
+    .content {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 100%;
+      padding: 0% 5%;
+
+      li {
+        position: relative;
+        overflow: hidden;
+
+        img {
+          //img 적용할 때 공간없게 자르기
+          display: block;
+          position: absolute;
+          top: 50%;
+          left: 0%;
+          transform: translateY(-50%);
+          width: 53%;
+        }
+
+        .desk {
+          float: right;
+          width: 45%;
+  
+          table {
+            width: 100%;
+            line-height: 1.3;
+  
+            caption {
+              text-align: left;
+              font-size: 60px;
+              font-weight: 300;
+              margin-bottom: 50px;
+              line-height: 1.1;
+  
+              span {
+                display: block;
+                font-weight: 100;
+              }
+            }
+  
+            tbody {
+              tr{
+                line-height: 1.5;
+  
+                th {
+                  font-size: 20px;
+                  font-weight: 500;
+                }
+    
+                td {
+                  font-size: 18px;
+                  color: #555555;
+
+                  a {
+                    background: url(../img/icon/click-icon.png) no-repeat right center / 25px 25px;
+                    margin-left: 5px;
+                    padding: 0px 18px 4px 4px;
+                    border-bottom: 1px dotted #555555;
+                    font-weight: 500;
+                  }
+                }
+              }
+            }
+          }
+
+          .sub-title {
+            margin-top: 50px;
+
+            li{
+              background: url(../img/icon/importance-icon.svg) no-repeat left center / 25px 25px;
+              font-size: 23px;
+              padding-left: 35px;
+              color: #333333;
+
+              span {
+                color: red;
+              }
+            }
+          }
+  
+          .btn {
+            width: 80%;
+            margin-top: 50px;
+  
+            a {
+              display: block;
+              float: left;
+              width: 40%;
+              padding: 3.5%;
+              margin-top: 10px;
+              background: #FCFBFC;
+              font-size: 18px;
+              text-align: center;
+              border: 2px solid #7D7563;
+              border-radius: 8px;
+              box-shadow: 1px 1px 5px rgba(0,0,0,0.4), 1px 1px 5px rgba(0,0,0,0.4);
+              transition: all .4s;
+  
+              &:first-child {
+                margin-right: 3%;
+              }
+  
+              &:hover {
+                background: #7D7563;
+                color: #fff;
+                border-color: #FCFBFC;
               }
             }
           }
