--- a/Jungle-Academy/portfolio5-full_page_design/css/index_p.css
+++ b/Jungle-Academy/portfolio5-full_page_design/css/index_p.css
@@ -1,96 +1,29 @@
-.section {
-  background: #FFEDC2;
-}
-
-.section > div .content-wrap {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  width: 80%;
-  height: 80%;
-  margin: 0px auto;
-  -webkit-box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.1), 1px 1px 10px rgba(0, 0, 0, 0.1);
-          box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.1), 1px 1px 10px rgba(0, 0, 0, 0.1);
+section.intro {
   background: #F8F8F8;
 }
 
-.section > div .content-wrap .control .prev img, .section > div .content-wrap .control .next img {
-  width: 80px;
+section.intro > div .content-wrap {
+  padding: 5%;
 }
 
-.section > div .content-wrap .control .prev {
-  position: absolute;
-  top: 50%;
-  left: -90px;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
-}
-
-.section > div .content-wrap .control .next {
-  position: absolute;
-  top: 50%;
-  right: -90px;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
-}
-
-.section > div .content-wrap .indicator {
-  position: absolute;
-  left: 0;
-  bottom: 20px;
-  width: 100%;
-  text-align: center;
-}
-
-.section > div .content-wrap .indicator li {
-  display: inline-block;
-  border-radius: 20px;
-}
-
-.section > div .content-wrap .indicator li.on {
-  background: #1F1D17;
-}
-
-.section > div .content-wrap .indicator li a {
-  display: block;
-  width: 10px;
-  height: 10px;
-  border: 3px solid #1F1D17;
-  border-radius: 20px;
-  overflow: hidden;
-  text-indent: -999px;
-}
-
-.section > div .content-wrap .indicator li + li {
-  margin-left: 3px;
-}
-
-.intro {
-  background: #F8F8F8;
-}
-
-.intro > div .content-wrap {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  width: 90%;
-  margin: 0px auto;
-  overflow: hidden;
-  -webkit-box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.1), 1px 1px 10px rgba(0, 0, 0, 0.1);
-          box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.1), 1px 1px 10px rgba(0, 0, 0, 0.1);
-}
-
-.intro > div .content-wrap img {
+section.intro > div .content-wrap .img-wrap {
+  position: relative;
   display: block;
   float: left;
   width: 50%;
+  height: 100%;
+  overflow: hidden;
 }
 
-.intro > div .content-wrap > div {
+section.intro > div .content-wrap .img-wrap img {
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  width: 100%;
+}
+
+section.intro > div .content-wrap div + div {
   float: left;
   width: 50%;
   height: 100%;
@@ -98,33 +31,33 @@
   background: #FCFBFC;
 }
 
-.intro > div .content-wrap > div p {
+section.intro > div .content-wrap div + div p {
   font-size: 18px;
   line-height: 1.8;
 }
 
-.intro > div .content-wrap > div p span {
+section.intro > div .content-wrap div + div p span {
   display: block;
   font-size: 60px;
 }
 
-.intro > div .content-wrap > div ul li {
+section.intro > div .content-wrap div + div ul li {
   width: 100%;
   text-align: center;
   font-weight: 500;
 }
 
-.intro > div .content-wrap > div > ul {
+section.intro > div .content-wrap div + div > ul {
   margin-top: 50px;
 }
 
-.intro > div .content-wrap > div > ul > li {
+section.intro > div .content-wrap div + div > ul > li {
   padding-bottom: 20px;
   font-size: 20px;
   text-align: left;
 }
 
-.intro > div .content-wrap > div > ul ul li a {
+section.intro > div .content-wrap div + div > ul ul li a {
   display: block;
   padding: 15px;
   margin-top: 10px;
@@ -132,11 +65,24 @@
   font-size: 18px;
 }
 
-.portfolio4 .content-wrap {
-  position: relative;
+.section {
+  background: #FFEDC2;
 }
 
-.portfolio4 .content-wrap .content {
+.section .content-wrap {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  width: 80%;
+  height: 80%;
+  -webkit-box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+          box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+  background: #F8F8F8;
+}
+
+.section .content-wrap .content {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -146,12 +92,12 @@
   padding: 0% 5%;
 }
 
-.portfolio4 .content-wrap .content li {
+.section .content-wrap .content li {
   position: relative;
   overflow: hidden;
 }
 
-.portfolio4 .content-wrap .content li img {
+.section .content-wrap .content li img {
   display: block;
   position: absolute;
   top: 50%;
@@ -161,17 +107,17 @@
   width: 53%;
 }
 
-.portfolio4 .content-wrap .content li .desk {
+.section .content-wrap .content li .desk {
   float: right;
   width: 45%;
 }
 
-.portfolio4 .content-wrap .content li .desk table {
+.section .content-wrap .content li .desk table {
   width: 100%;
   line-height: 1.3;
 }
 
-.portfolio4 .content-wrap .content li .desk table caption {
+.section .content-wrap .content li .desk table caption {
   text-align: left;
   font-size: 60px;
   font-weight: 300;
@@ -179,26 +125,27 @@
   line-height: 1.1;
 }
 
-.portfolio4 .content-wrap .content li .desk table caption span {
+.section .content-wrap .content li .desk table caption span {
   display: block;
+  font-size: 50px;
   font-weight: 100;
 }
 
-.portfolio4 .content-wrap .content li .desk table tbody tr {
+.section .content-wrap .content li .desk table tbody tr {
   line-height: 1.5;
 }
 
-.portfolio4 .content-wrap .content li .desk table tbody tr th {
+.section .content-wrap .content li .desk table tbody tr th {
   font-size: 20px;
   font-weight: 500;
 }
 
-.portfolio4 .content-wrap .content li .desk table tbody tr td {
+.section .content-wrap .content li .desk table tbody tr td {
   font-size: 18px;
   color: #555555;
 }
 
-.portfolio4 .content-wrap .content li .desk table tbody tr td a {
+.section .content-wrap .content li .desk table tbody tr td a {
   background: url(../img/icon/click-icon.png) no-repeat right center/25px 25px;
   margin-left: 5px;
   padding: 0px 18px 4px 4px;
@@ -206,27 +153,27 @@
   font-weight: 500;
 }
 
-.portfolio4 .content-wrap .content li .desk .sub-title {
+.section .content-wrap .content li .desk .sub-title {
   margin-top: 50px;
 }
 
-.portfolio4 .content-wrap .content li .desk .sub-title li {
+.section .content-wrap .content li .desk .sub-title li {
   background: url(../img/icon/importance-icon.svg) no-repeat left center/25px 25px;
   font-size: 23px;
   padding-left: 35px;
   color: #333333;
 }
 
-.portfolio4 .content-wrap .content li .desk .sub-title li span {
+.section .content-wrap .content li .desk .sub-title li span {
   color: red;
 }
 
-.portfolio4 .content-wrap .content li .desk .btn {
+.section .content-wrap .content li .desk .btn {
   width: 80%;
   margin-top: 50px;
 }
 
-.portfolio4 .content-wrap .content li .desk .btn a {
+.section .content-wrap .content li .desk .btn a {
   display: block;
   float: left;
   width: 40%;
@@ -243,13 +190,46 @@
   transition: all .4s;
 }
 
-.portfolio4 .content-wrap .content li .desk .btn a:first-child {
+.section .content-wrap .content li .desk .btn a:first-child {
   margin-right: 3%;
 }
 
-.portfolio4 .content-wrap .content li .desk .btn a:hover {
+.section .content-wrap .content li .desk .btn a:hover {
   background: #7D7563;
   color: #fff;
   border-color: #FCFBFC;
+}
+
+.section .content-wrap .control .prev img, .section .content-wrap .control .next img {
+  width: 80px;
+}
+
+.section .content-wrap .control .prev {
+  position: absolute;
+  top: 50%;
+  left: -90px;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+}
+
+.section .content-wrap .control .next {
+  position: absolute;
+  top: 50%;
+  right: -90px;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+}
+
+.section .content-wrap .indicator {
+  position: absolute;
+  left: 0;
+  bottom: 20px;
+  width: 100%;
+  text-align: center;
+  font-size: 15px;
+}
+
+.pp1 .content-wrap .content li .desk table tbody tr td a {
+  padding: 0px 25px 4px 4px;
 }
 /*# sourceMappingURL=index_p.css.map */
