--- a/Jungle-Academy/portfolio5-full_page_design/css/index_p.scss
+++ b/Jungle-Academy/portfolio5-full_page_design/css/index_p.scss
@@ -1,104 +1,34 @@
-.section {
-  background: #FFEDC2;
-
-  >div {
-    .content-wrap {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      width: 80%;
-      height: 80%;
-      margin: 0px auto;
-      box-shadow: 1px 1px 10px rgba(0,0,0,0.1), 1px 1px 10px rgba(0,0,0,0.1);
-      background: #F8F8F8;
-
-      .control {
-        .prev, .next {
-          img {
-            width: 80px;
-          }
-        }
-
-        .prev {
-          position: absolute;
-          top: 50%;
-          left: -90px;
-          transform: translateY(-50%);
-        }
-  
-        .next {
-          position: absolute;
-          top: 50%;
-          right: -90px;
-          transform: translateY(-50%);
-        }
-      }
-
-      .indicator {
-        position: absolute;
-        left: 0;
-        bottom: 20px;
-        width: 100%;
-        text-align: center;
-        // background: black;
-        
-        li {
-          display: inline-block;
-          border-radius: 20px;
-
-          &.on {
-            background: #1F1D17;
-          }
-
-          a {
-            display: block;
-            width: 10px;
-            height: 10px;
-            border: 3px solid #1F1D17;
-            border-radius: 20px;
-            overflow: hidden;
-            text-indent: -999px;
-          }
-        }
-
-        li+li {
-          margin-left: 3px;
-        }
-      }
-    }
-  }
-}
-
-.intro {
+section.intro {
   background: #F8F8F8;
 
-  //box-sizing 이 왜 안먹는지 모르겠음
   > div {
     .content-wrap {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      width: 90%;
-      margin: 0px auto;
-      overflow: hidden;
-      box-shadow: 1px 1px 10px rgba(0,0,0,0.1), 1px 1px 10px rgba(0,0,0,0.1);
+      padding: 5%;
       
-      img {
+      .img-wrap {
+        position: relative;
         display: block;
         float: left;
         width: 50%;
+        height: 100%;
+        overflow: hidden;
+
+        img {
+          position: absolute;
+          top: 50%;
+          transform: translateY(-50%);
+          width: 100%;
+        }
       }
 
-      > div {
+      div+div {
         float: left;
         width: 50%;
         height: 100%;
         padding: 3%;
         background: #FCFBFC;
 
-        p{
+        p {
           font-size: 18px;
           line-height: 1.8;
 
@@ -146,9 +76,18 @@
   }
 }
 
-.portfolio4 {
+.section {
+  background: #FFEDC2;
+
   .content-wrap{
-    position: relative;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 80%;
+    height: 80%;
+    box-shadow: 0px 0px 10px rgba(0,0,0,0.3);
+    background: #F8F8F8;
 
     .content {
       position: absolute;
@@ -189,6 +128,7 @@
   
               span {
                 display: block;
+                font-size: 50px;
                 font-weight: 100;
               }
             }
@@ -265,5 +205,42 @@
         }
       }
     }
+
+    .control {
+      .prev, .next {
+        img {
+          width: 80px;
+        }
+      }
+
+      .prev {
+        position: absolute;
+        top: 50%;
+        left: -90px;
+        transform: translateY(-50%);
+      }
+
+      .next {
+        position: absolute;
+        top: 50%;
+        right: -90px;
+        transform: translateY(-50%);
+      }
+    }
+
+    .indicator {
+      position: absolute;
+      left: 0;
+      bottom: 20px;
+      width: 100%;
+      text-align: center;
+      font-size: 15px;
+    }
+  }
+}
+
+.pp1 {
+  .content-wrap .content li .desk table tbody tr td a {
+    padding: 0px 25px 4px 4px;
   }
 }
