--- a/Jungle-Academy/portfolio5-full_page_design/css/index_p.css
+++ b/Jungle-Academy/portfolio5-full_page_design/css/index_p.css
@@ -117,6 +117,14 @@ section.intro > div .content-wrap div + div > ul ul li a {
   font-size: 15px;
 }
 
+.pp1 .content-wrap .content li:nth-child(2) {
+  display: none;
+}
+
+.pp2 .content-wrap .content li:first-child {
+  display: none;
+}
+
 .content > li {
   position: absolute;
   top: 50%;
@@ -124,11 +132,8 @@ section.intro > div .content-wrap div + div > ul ul li a {
   -webkit-transform: translateY(-50%);
           transform: translateY(-50%);
   width: 90%;
+  height: 80%;
   overflow: hidden;
-}
-
-.content > li:first-child {
-  display: none;
 }
 
 .content > li img {
@@ -232,10 +237,6 @@ section.intro > div .content-wrap div + div > ul ul li a {
   background: #7D7563;
   color: #fff;
   border-color: #FCFBFC;
-}
-
-.content li + li {
-  height: 80%;
 }
 
 .content li + li .btn {
