--- a/Jungle-Academy/portfolio4-admin_design/css/index.css
+++ b/Jungle-Academy/portfolio4-admin_design/css/index.css
@@ -193,32 +193,36 @@ section + section {
   font-weight: 400;
 }
 
-#sales-info .sales .table-wrap {
+section .table-wrap {
   margin: 0px 20px;
 }
 
-#sales-info .sales .table-wrap table {
+section .table-wrap table {
   width: 100%;
 }
 
-#sales-info .sales .table-wrap table tbody tr td {
+section .table-wrap table tbody tr + tr:hover {
+  background-color: #f5f5f5;
+}
+
+section .table-wrap table tbody tr td {
   padding: 10px;
   color: rgba(0, 0, 0, 0.4);
   font-size: 13px;
 }
 
-#sales-info .sales .table-wrap table tbody tr td:first-child, #sales-info .sales .table-wrap table tbody tr td:nth-child(3) {
+section .table-wrap table tbody tr td:first-child, section .table-wrap table tbody tr td:nth-child(3) {
   color: #27A599;
 }
 
-#sales-info .sales .table-wrap table tbody tr:first-child td {
+section .table-wrap table tbody tr:first-child td {
   padding-bottom: 15px;
   text-transform: uppercase;
   font-size: 14px;
   color: rgba(0, 0, 0, 0.7);
 }
 
-#sales-info .sales .table-wrap table tbody tr + tr {
+section .table-wrap table tbody tr + tr {
   border-top: 1px solid rgba(0, 0, 0, 0.1);
 }
 
@@ -409,5 +413,29 @@ section + section {
   height: 100%;
   background: white;
   font-size: 60px;
+}
+
+.desc .desc-content {
+  float: left;
+  width: 40%;
+}
+
+.desc .desc-content .table-wrap {
+  width: 100%;
+  margin: 0px;
+  padding: 20px;
+  background: white;
+}
+
+.desc .desc-content p {
+  font-size: 30px;
+  margin-top: 10px;
+  background: white;
+}
+
+.desc ul {
+  float: right;
+  width: calc(60% - 10px);
+  background: red;
 }
 /*# sourceMappingURL=index.css.map */
