--- a/Jungle-Academy/portfolio4-admin_design/css/index.scss
+++ b/Jungle-Academy/portfolio4-admin_design/css/index.scss
@@ -92,7 +92,6 @@ header.open + main > #main-wrap {
     }
 
     p {
-      // background: pink;
       margin-top: 25px;
       color: rgba(0,0,0,0.4);
       font-size: 13px;
@@ -172,38 +171,46 @@ section+section {
         }
       }
     }
-    
-    .table-wrap {
-      margin: 0px 20px;
+  }
+}
 
-      table {
-        width: 100%;
+section {
+  .table-wrap {
+    margin: 0px 20px;
 
-        tbody {
-          tr {
-            td {
-              padding: 10px;
-              color: rgba(0,0,0,0.4);
-              font-size: 13px;
-            }
+    table {
+      width: 100%;
 
-            td:first-child, td:nth-child(3) {
-              color: #27A599;
-            }
+      tbody {
+        tr+tr {
+          &:hover {
+            background-color: #f5f5f5;
+          }
+        }
+
+        tr {
+          td {
+            padding: 10px;
+            color: rgba(0,0,0,0.4);
+            font-size: 13px;
           }
 
-          tr:first-child {
-            td {
-              padding-bottom: 15px;
-              text-transform: uppercase;
-              font-size: 14px;
-              color: rgba(0,0,0,0.7);
-            }
+          td:first-child, td:nth-child(3) {
+            color: #27A599;
           }
+        }
 
-          tr+tr {
-            border-top: 1px solid rgba(0,0,0,0.1);
+        tr:first-child {
+          td {
+            padding-bottom: 15px;
+            text-transform: uppercase;
+            font-size: 14px;
+            color: rgba(0,0,0,0.7);
           }
+        }
+
+        tr+tr {
+          border-top: 1px solid rgba(0,0,0,0.1);
         }
       }
     }
@@ -375,12 +382,40 @@ section+section {
     li:nth-child(4) {bottom: 0%; right: 0%;}
   }
 
-    .weather {
-    position: absolute;
-    top: 0px;
-    right: 0px;
-    height: 100%;
-    background: white;
-    font-size: 60px;
+  .weather {
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  height: 100%;
+  background: white;
+  font-size: 60px;
+  }
+}
+
+.desc {
+  .desc-content {
+    float: left;
+    width: 40%;
+
+    .table-wrap {
+      width: 100%;
+      margin: 0px;
+      padding: 20px;
+      background: white;
     }
+
+    p {
+      // height: 150px;
+      font-size: 30px;
+      margin-top: 10px;
+      background: white;
+    }
+  }
+
+
+  ul {
+    float: right;
+    width: calc(60% - 10px);
+    background: red;
+  }
 }
