--- a/Jungle-Academy/portfolio2-warevalley/css/index.css
+++ b/Jungle-Academy/portfolio2-warevalley/css/index.css
@@ -721,4 +721,4 @@ section.aboutus div.hero div.innerBox p {
     display: none;
   }
 }
-/*# sourceMappingURL=ware-valley.css.map */
+/*# sourceMappingURL=index.css.map */
