--- a/Jungle-Academy/portfolio4-admin_design/css/index.scss
+++ b/Jungle-Academy/portfolio4-admin_design/css/index.scss
@@ -395,6 +395,7 @@ section {
   top: 0%;
   right: 13.5%;
   height: 100%;
+  padding: 2% 0%;
   background: white;
   font-size: 60px;
   text-align: center;
@@ -414,10 +415,12 @@ section {
     h2 {
       padding: 6%;
       font-size: 17px;
+      border-top: 1px solid rgba(0,0,0,0.1);
       border-bottom: 1px solid rgba(0,0,0,0.1);
     }
 
     div:first-of-type {
+      padding-top: 10px;
       color: #F36564;
       font-size: 15px;
 
@@ -449,7 +452,7 @@ section {
         position: absolute;
         top: 0%;
         width: 30%;
-        height: 100%;
+        padding: 2% 0%;
         font-size: 13px;
         font-weight: bold;
         background-size: cover;
@@ -457,6 +460,8 @@ section {
 
       > span:first-child {
         left: 0%;
+        height: 100%;
+        padding: 0%;
       }
 
       > span:nth-child(2) {
@@ -473,8 +478,10 @@ section {
       width: 95%;
       height: 45%;
       margin: 0 auto;
-      padding-top: 15px;
+      padding: 15px 0px;
       border-top: 1px solid rgba(0,0,0,0.1);
+      border-bottom: 1px solid rgba(0,0,0,0.1);
+      box-shadow: 0px 5px 15px rgba(0,0,0,0.1);
       overflow: hidden;
 
       li+li {
@@ -490,17 +497,32 @@ section {
         font-weight: bold;
         color: rgba(0,0,0,0.5);
         
-        > span {
+        > span, >em {
           position: absolute;
-          height: 30%;
+          left: 50%;
+          transform: translateX(-50%);
+          font-size: 14px;
         }
 
-        > span:first-child {
-          top: 0%;
-          background: red;
+        span:first-of-type {
+          top: 15%;
+          font-weight: 400;
+
+          span {
+            margin-top: 5px;
+          }
+        }
+
+        span:nth-of-type(2) {
+          top: 50%;
+          transform: translate(-50%, -50%);
+          width: 40px;
+          height: 40px;
+          background-size: 40px;          
         }
 
         > em {
+          bottom: 30%;
           color: #F36564;
         }
 
