--- a/Jungle-Academy/portfolio4-admin_design/css/index.css
+++ b/Jungle-Academy/portfolio4-admin_design/css/index.css
@@ -1,17 +1,3 @@
-#main-wrap {
-  position: absolute;
-  top: 61px;
-  left: 50px;
-  right: 0px;
-  padding: 30px;
-  background: #E5E9EC;
-  z-index: 1;
-}
-
-header.open + main > #main-wrap {
-  left: 250px;
-}
-
 #overall {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -297,8 +283,10 @@ section .table-wrap table tbody tr + tr {
 
 .joing .joing-group img {
   width: 100%;
-  -webkit-transition: scale .4s;
-  transition: scale .4s;
+  -webkit-transition: -webkit-transform .4s;
+  transition: -webkit-transform .4s;
+  transition: transform .4s;
+  transition: transform .4s, -webkit-transform .4s;
 }
 
 .joing .joing-group div:nth-of-type(2) {
@@ -419,7 +407,7 @@ section .table-wrap table tbody tr + tr {
   top: 0%;
   right: 13.5%;
   height: 100%;
-  padding: 2% 0%;
+  padding: 1.5% 0%;
   background: white;
   font-size: 60px;
   text-align: center;
@@ -507,8 +495,6 @@ section .table-wrap table tbody tr + tr {
   padding: 15px 0px;
   border-top: 1px solid rgba(0, 0, 0, 0.1);
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-  -webkit-box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1);
-          box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1);
   overflow: hidden;
 }
 
