--- a/Jungle-Academy/portfolio4-admin_design/css/index.scss
+++ b/Jungle-Academy/portfolio4-admin_design/css/index.scss
@@ -1,17 +1,3 @@
-#main-wrap {
-  position: absolute;
-  top: 61px;
-  left: 50px;
-  right: 0px;
-  padding: 30px;
-  background: #E5E9EC;
-  z-index: 1;
-}
-
-header.open + main > #main-wrap {
-  left:250px;
-}
-
 #overall {
   display: flex;
   justify-content: space-between;
@@ -287,9 +273,7 @@ section {
 
     img {
       width: 100%;
-      //트랜지션 안먹힘
-      transition: scale .4s;
-
+      transition: transform .4s;
     }
 
     div:nth-of-type(2) {
@@ -395,7 +379,7 @@ section {
   top: 0%;
   right: 13.5%;
   height: 100%;
-  padding: 2% 0%;
+  padding: 1.5% 0%;
   background: white;
   font-size: 60px;
   text-align: center;
@@ -481,7 +465,6 @@ section {
       padding: 15px 0px;
       border-top: 1px solid rgba(0,0,0,0.1);
       border-bottom: 1px solid rgba(0,0,0,0.1);
-      box-shadow: 0px 5px 15px rgba(0,0,0,0.1);
       overflow: hidden;
 
       li+li {
