--- a/Jungle-Academy/portfolio4-admin_design/css/sub-page/subpage-list.css
+++ b/Jungle-Academy/portfolio4-admin_design/css/sub-page/subpage-list.css
@@ -1,12 +1,25 @@
 main {
-  height: calc(100% - 61px);
+  min-height: calc(100vh - 61px);
   padding: 2% 12%;
 }
 
 #main-wrap {
-  height: 100%;
   padding: 2%;
   background: #fff;
+}
+
+table {
+  width: 100%;
+  border-top: 2px solid rgba(0, 0, 0, 0.1);
+  border-bottom: 2px solid rgba(0, 0, 0, 0.1);
+}
+
+table tr + tr {
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+table th {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 }
 
 header.open + main {
@@ -32,41 +45,50 @@ header.open + main {
 }
 
 .list-search h2 {
-  padding: 0.8% 0%;
+  padding: 3% 0.8% 0.8%;
   font-size: 15px;
   font-weight: bold;
 }
 
 .list-search table {
-  width: 100%;
   font-size: 12px;
 }
 
-.list-search table tr {
-  line-height: 25px;
-}
-
-.list-search table tr td {
+.list-search table td {
   padding-left: 14px;
-  border: 1px solid rgba(0, 0, 0, 0.2);
+  height: 35px;
 }
 
-.list-search table tr td input[type="text"] {
+.list-search table td input[type="text"] {
   width: calc(100% - 110px);
-  line-height: 20px;
 }
 
-.list-search table tr td:nth-child(2n-1) {
+.list-search table td input[type="text"], .list-search table td select {
+  border: 1px solid gray;
+  border-radius: 0;
+  height: 20px;
+}
+
+.list-search table td label + label {
+  margin-left: 10px;
+}
+
+.list-search table td i {
+  font-size: 12px;
+}
+
+.list-search table td:nth-child(2n-1) {
   background: #F4F5F7;
+}
+
+.list-search table td.no-design {
+  background: none;
+  border: none;
 }
 
 .list-search button {
   display: block;
-  position: absolute;
-  bottom: 0%;
-  left: 50%;
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
+  margin: 3% auto 0%;
   width: 6%;
   padding: 0.6% 0%;
   font-size: 12px;
@@ -75,8 +97,65 @@ header.open + main {
 }
 
 .list-board {
+  position: relative;
   margin-top: 2%;
   height: 66%;
-  background: pink;
+}
+
+.list-board table {
+  font-size: 13px;
+}
+
+.list-board table th {
+  height: 30px;
+  background: #F4F5F7;
+}
+
+.list-board table td {
+  text-align: center;
+  height: 35px;
+}
+
+.list-board table td:nth-child(2) {
+  text-align: left;
+  padding-left: 14px;
+}
+
+.list-board table td:nth-child(2) a:hover {
+  text-decoration: underline;
+}
+
+.list-board table td:last-child span + span {
+  display: block;
+  color: gray;
+}
+
+.list-board ul {
+  margin: 20px auto 0px;
+  text-align: center;
+  font-size: 0px;
+}
+
+.list-board ul li {
+  display: inline-block;
+  font-size: 13px;
+}
+
+.list-board ul li a {
+  display: inline-block;
+  color: #777;
+  padding: 5px;
+}
+
+.list-board ul li a:hover {
+  text-decoration: underline;
+}
+
+.list-board ul li + li:before {
+  display: inline-block;
+  content: '';
+  width: 1px;
+  height: 8px;
+  background: #777;
 }
 /*# sourceMappingURL=subpage-list.css.map */
