--- a/Jungle-Academy/portfolio4-admin_design/css/header.scss
+++ b/Jungle-Academy/portfolio4-admin_design/css/header.scss
@@ -3,18 +3,25 @@ body, header, nav, div, ul, li, h1, h2, h3, h4, h5, h6, main, a, section, articl
 body {font-family: sans-serif; font-size: 13px;}
 li {list-style: none;}
 a {text-decoration: none; color: inherit;}
-input, button {
+input, button, select {
   display: inline-block;
   box-sizing: border-box;
-  border: 0;
-  vertical-align: middle;
+  border: 0 none;
+  border-radius: none;
+  vertical-align: baseline;
   white-space: normal;
   background: none;
   line-height: 1;
   font: inherit;
 }
 
-select {vertical-align: middle; box-sizing: border-box; font: inherit;}
+select {
+  appearance: none;
+}
+
+button {
+  cursor: pointer;
+}
 
 h1, h2, h3, h4, h5, h6 {font-size: inherit; font-weight: normal;}
 table {
@@ -103,6 +110,7 @@ i {
       height: 36px;
       margin-left: 40px;
 
+      //위치랑 다시 지정
       input {
         display: block;
         float: left;
@@ -113,8 +121,7 @@ i {
         &:focus {
           background: #F4F5F7;
 
-          a {
-            //왜 적용 안되는지 모르겠음
+          + a {
             background: #F4F5F7;
           }
         }
@@ -197,7 +204,6 @@ i {
         right: 0%;
         width: 160px;
         background: #FFFFFF;
-        //전체 끊김없이 쉐도 주고싶음
         box-shadow: -1px -1px 2px rgba(0,0,0,0.2), 1px 1px 2px rgba(0,0,0,0.2);
         border-radius: 2px;
 
@@ -510,10 +516,7 @@ header {
             padding: 14px 0px 14px 30px;
 
             &:hover {
-              //왜 a는 색이 안변하는지 모르겠음
-              color: #fff;
-
-              i {
+              span, i{
                 color: #fff;
               }
             }
