--- a/Jungle-Academy/portfolio4-admin_design/css/sub-page/subpage-list.scss
+++ b/Jungle-Academy/portfolio4-admin_design/css/sub-page/subpage-list.scss
@@ -1,3 +1,7 @@
+body {
+  color: #2D3138;
+}
+
 main {
   min-height: calc(100vh - 61px);
   padding: 2% 12%;
@@ -8,21 +12,18 @@ main {
   background: #fff;
 }
 
+  //border 색이 일정하지 않음
 table {
   width: 100%;
   border-top: 2px solid rgba(0,0,0,0.1);
   border-bottom: 2px solid rgba(0,0,0,0.1);
 
-  tr+tr {
-    border-top: 1px solid rgba(0,0,0,0.1);
-  }
-
   th {
-    border-bottom: 1px solid rgba(0,0,0,0.1);
+    // border-bottom: 1px solid rgba(0,0,0,0.1);
   }
 
-  td+td, th+th {
-    // border-left: 1px solid rgba(0,0,0,0.2);
+  td, th {
+    border-bottom: 1px solid rgba(0,0,0,0.1);
   }
 }
 
@@ -39,12 +40,12 @@ header.open + main {
     right: 0%;
     display: block;
     width: 8%;
-    padding: 0.8% 0%;
+    line-height: 30px;
     color: #fff;
     text-align: center;
-    font-size: 12px;
+    font-size: 11px;
     font-weight: bold;
-    background: #F40000;
+    background: #E9595A;
   }
 
   h2 {
@@ -53,7 +54,6 @@ header.open + main {
     font-weight: bold;
   }
 
-  //border 색이 일정하지 않음
   table {
     font-size: 12px;
 
@@ -61,19 +61,24 @@ header.open + main {
       padding-left: 14px;
       height: 35px;
 
+      label+label {
+        margin-left: 10px;
+      }
+
       input[type="text"] {
         width: calc(100% - 110px);
       }
 
-      //select에 after로 화살표 넣기
       input[type="text"], select {
         border: 1px solid gray;
         border-radius: 0;
         height: 20px;
+        line-height: 13px;
       }
 
-      label+label {
-        margin-left: 10px;
+      select {
+        padding: 0px 15px 0px 5px;
+        background: url(../../img/icon/arrow-both.png) no-repeat right center / 15px;
       }
 
       i {
@@ -86,9 +91,8 @@ header.open + main {
     }
 
 
-    td.no-design {
+    td.no-bg {
       background: none;
-      border: none;
     }
   }
 
@@ -96,7 +100,7 @@ header.open + main {
     display: block;
     margin: 3% auto 0%;
     width: 6%;
-    padding: 0.6% 0%;
+    line-height: 30px;
     font-size: 12px;
     background: #888;
     color: #fff;
@@ -112,6 +116,18 @@ header.open + main {
   table {
     font-size: 13px;
 
+    tr {
+      &:hover {
+        background: #f5f5f5;
+      }
+
+      a {
+        &:hover {
+          text-decoration: underline;
+        }
+      }
+    }
+
     th {
       height: 30px;
       background: #F4F5F7;
@@ -124,11 +140,13 @@ header.open + main {
       &:nth-child(2) {
         text-align: left;
         padding-left: 14px;
-
+        max-width: 1px;
+        
         a {
-          &:hover {
-            text-decoration: underline;
-          }
+          display: block;
+          white-space: nowrap;
+          text-overflow: ellipsis;
+          overflow: hidden;
         }
       }
 
@@ -142,6 +160,7 @@ header.open + main {
   }
 
   ul {
+    // position: relative;
     margin: 20px auto 0px;
     text-align:center;
     font-size:0px;
